<resources>
	<string name="app_name">Quick Query</string>

	<string name="cancel">Cancel</string>
	<string name="general">General</string>
	<string name="copy_title">Copy to Launch</string>
	<string name="clipboard">Clipboard</string>
	<string name="xda">Forum Support</string>
	<string name="google_play">Google Play</string>
	<string name="developer">Developer</string>
	<string name="test">Tap to Test</string>
	<string name="copy_summary">When copying a text, a floating button Will show on the screen. Hold to dismiss (Not Supported on Android 10+)</string>
	<string name="hide_summary">Hides the floating bubble after the specified period (in Seconds).</string>
	<string name="hide_title">Auto-hide delay</string>
	<string name="pro_title">Pro Version</string>
	<string name="pro_summary">Unlock all features, Remove ads, and Support the developer</string>
	<string name="functionality">Functionality</string>
	<string name="engines_title">Select Search Engines</string>
	<string name="rate">Rate</string>
	<string name="settings">Settings</string>
	<string name="permissions_fail">Permissions Denied!</string>
	<string name="donate">Donate</string>
	<string name="grant">Grant</string>
	<string name="deny">Deny</string>
	<string name="request_permissions">QuickQuery requires Overlay Permissions</string>
	<string name="running">Copy to Launch is running</string>
</resources>
